Upgrade to track 2 SDK, v6 => v12 (#15)